# stone_skipper

./: CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
.github/workflows/: build_and_test.yml  release.yml
functional_tests/: config.shoal  lunchtoast_linux_vars.cfg  lunchtoast_windows_vars.cfg  nginx_linux.conf  nginx_windows.conf  stone_skipper_linux_config.shoal  stone_skipper_windows_config.shoal
functional_tests/concurrent_requests/: test.toast
functional_tests/concurrent_requests_multithreaded/: test.toast
functional_tests/hello_world/: test.toast
src/: commandline.h  config.h  errors.h  main.cpp  path_utils.h  processlauncher.cpp  processlauncher.h  task.cpp  task.h  taskprocessor.cpp  taskprocessor.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test_utils.cpp
